<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainNavigation">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
            android:layout_marginTop="?android:attr/actionBarSize"
            android:layout_marginBottom="?android:attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pager_main">
    </android.support.v4.view.ViewPager>

    <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bottom_nav"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom"
            android:layoutMode="clipBounds"
            app:layout_anchorGravity="bottom"
            app:menu="@menu/bottom_menu"
            app:itemIconTint="@drawable/nav_item_color_state"
            app:itemTextColor="@drawable/nav_item_color_state">
    </android.support.design.widget.BottomNavigationView>
</android.support.design.widget.CoordinatorLayout>