...
                android:id="@+id/toolbar_search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
            android:id="@+id/tab_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutMode="opticalBounds"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/colorPrimaryDark">

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical"
                android:layout_centerHorizontal="true"/>

        <android.support.v4.view.ViewPager
                android:id="@+id/pager_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@+id/page_1"
                    android:layout_width="match_parent"
...
